paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/rel_op_c5/sample_005/target.compile.log
error[E0606]: casting `&i32` as `*const ()` is invalid
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/rel_op_c5/sample_005/target.rs:8:15
  |
8 |     let px1 = &x as *const ();
  |               ^^^^^^^^^^^^^^^

error[E0606]: casting `&i32` as `*const ()` is invalid
 --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/rel_op_c5/sample_005/target.rs:9:15
  |
9 |     let px2 = &x as *const ();
  |               ^^^^^^^^^^^^^^^

error[E0606]: casting `&i32` as `*const ()` is invalid
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/rel_op_c5/sample_005/target.rs:21:14
   |
21 |     let p0 = &arr[0] as *const ();
   |              ^^^^^^^^^^^^^^^^^^^^

error[E0606]: casting `&i32` as `*const ()` is invalid
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/rel_op_c5/sample_005/target.rs:22:14
   |
22 |     let p2 = &arr[2] as *const ();
   |              ^^^^^^^^^^^^^^^^^^^^

error[E0606]: casting `&i32` as `*const ()` is invalid
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/expressions/rel_op_c5/sample_005/target.rs:30:18
   |
30 |     let q_last = &arr[2] as *const ();
   |                  ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0606`.